--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@heroicons/react": "^2.2.0",
     "@lottiefiles/react-lottie-player": "^3.6.0",
     "@stripe/stripe-js": "^7.3.0",
+    "@types/stripe": "^8.0.417",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "evergreen-content": "file:",
     "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.12.2",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
