--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@stripe/stripe-js": "^7.3.0",
     "@types/stripe": "^8.0.417",
     "@uploadthing/react": "^7.3.1",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
